@@ -1,3 +1,13 @@
+2018-02-15  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-951
+	
+	* 3rdparty/wigner/wigxjpf/CMakeLists.txt:
+
+	Remove calc_float128.c and c_wrap_float128.c from sources.
+	Not needed because we don't use quadmath. Fixes compilation failure
+	with Clang which doesn't support __float128.
+
 2018-02-15  Richard Larsson <ric.larsson@gmail.com>
 
 	* arts-2-3-950
